# epistemic-stack

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LESSONS.md  LICENSE  PROMPT.md  README.md  SSOT.md  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml  drift-check.yml
claude-drift/: server.py
claude-memory-mesh/: server.py
claude-proof/: server.py
docs/: INDEX.md
docs/operations/: SYNC.md
examples/: .drift-rules.json  CLAUDE.md
scripts/: github-sync-report.mjs  scan_repo.py
shared/: types.py
tests/: conftest.py  test_drift.py  test_e2e.py  test_memory_mesh.py  test_proof.py  test_scan_repo.py  test_types.py
